Prevent layout regions from overflowing when breaking to columns (#299)

--- a/packages/layout-multi-col/src/scss/styles.scss
+++ b/packages/layout-multi-col/src/scss/styles.scss
@@ -25,7 +25,7 @@
     margin-left: var(--layout-column-gap);
     margin-right: var(--layout-column-gap);
     flex: 1 1 calc((100% * (var(--region-weight, 0))) - (2 * var(--layout-column-gap)));
-    width: 100%;
+    width: calc(100% - (2 * var(--layout-column-gap)));
 
     &--25 {
       --region-weight: .25;
